# ZS-SNOW-Report

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: settings.example.yaml
tests/: conftest.py  helpers.py  test_charts.py  test_charts_ticks.py  test_chunking.py  test_cli.py  test_gui.py  test_io_loader.py  test_metrics.py  test_metrics_rounding.py  test_open_by_state_render.py  test_report.py  test_table_render.py  test_time_ops.py
tests/data/: all_bad_dates.csv  large_incident_data.csv  latin1_encoded.csv  missing_header.csv  sample_incidents.csv  utf16_encoded.csv
tests/golden/: chart_open_by_state.png.sha256  chart_opened_vs_resolved.png.sha256  chart_resolved_by_assignee.png.sha256  chart_resolved_per_day.png.sha256  chart_top_5_tags.png.sha256  report.pdf.sha256
zn_report/: __init__.py  charts.py  cli.py  config.py  constants.py  exceptions.py  gui.py  io_loader.py  metrics.py  report.py  time_ops.py
zn_report/templates/: report.html.j2
